[tool.poetry]
name = "deezer-api-client"
version = "0.1.0"
description = "Deezer public API client"
authors = ["Félix Voituret <contact@mazard-records.com>"]
readme = "README.md"
packages = [
    { include = "deezer" },
]


[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
